# AECO-Patch-Config

./: Cargo.toml
aeco-patch-config/: Cargo.toml
aeco-patch-config/src/: constants.rs  error.rs  lib.rs  process.rs  process_directory.rs  process_file.rs  status.rs
aeco-patch-configurator/: Cargo.toml
aeco-patch-configurator-gui/: Cargo.toml
aeco-patch-configurator-gui/src/: file_tree.rs  folder_picker.rs  main.rs  tree.rs
aeco-patch-configurator/src/: main.rs
src/: fsobject.rs  lib.rs  process_archive.rs
